--- a/JavaScript/tsconfig.json
+++ b/JavaScript/tsconfig.json
@@ -1,10 +1,3 @@
 {
-  "extends": "./tsconfig.base",
-  "compilerOptions": {
-    "baseUrl": "application",
-    "types" : ["requirejs"]
-  },
-  "include": [
-    "Ex/**/*.ts"
-  ]
+  "extends": "./tsconfig.base"
 }
